# morchella

./: .gitignore  Makefile
back/: Cargo.toml
back/decks/: 000-base-set.json  001-the-first-expansion.json  002-the-second-expansion.json  003-the-third-expansion.json  004-the-fourth-expansion.json  005-the-fifth-expansion.json  006-the-sixth-expansion.json  007-green-box-expansion.json  008-90s-nostalgia-pack.json  009-box-expansion.json  010-fantasy-pack.json  011-food-pack.json  012-science-pack.json  013-world-wide-web-pack.json  014-vote-for-hillary-pack.json  015-vote-for-trump-pack.json  016-trump-survival-pack.json  017-2012-holiday-pack.json  018-2013-holiday-pack.json  019-pax-east-2013.json  020-pax-prime-2013.json  021-pax-east-2014.json  022-pax-east-2014-panel-pack.json  023-pax-prime-2014-panel-pack.json  024-pax-prime-2015-food-packs.json  025-house-of-cards-against-humanity.json  026-reject-pack.json  027-reject-pack-2.json  028-canadian.json  029-misprint-replacement-bonus-cards.json  030-apples-to-apples-party-pack.json  031-crabs-adjust-humidity.json  032-cads-about-matrimony.json  033-tg.json  034-admin-s-picks.json  035-anime.json  036-antisocial-injustice.json  037-cards-against-equinity.json  038-cards-against-homestuck.json  039-derps-against-humanity.json  (+27 more)
back/src/: lib.rs  main.rs
back/src/deck/: card.rs  deck.rs  decks.rs  error.rs  game_deck.rs  mod.rs  raw.rs
front/: README.md  package-lock.json  package.json
front/src/: App.vue  i18n.js  icons.js  main.js  store.js
scripts/: convert-from-jah.py
scripts/cah-data/: 033-c-tg.json  (+100 more)
(+10 files in other folders)
