[package]
name = "morchella-back"
version = "0.1.0"
authors = ["Amaury Carrade <amaury@carrade.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.*"
failure_derive = "0.1.*"
glob = "0.3.*"
lazy_static = "1.4.*"
rand = "0.7.*"
regex = "1.*"
serde = "1.0.*"
serde_json = "1.0.*"
serde_derive = "1.0.*"
slugify = "0.1.*"
uuid = { version = "0.8.*", features = ["serde", "v4"] }
error-chain = "0.12.*"

[lib]
name = "cah"
path = "src/lib.rs"

[[bin]]
name = "morchella"
path = "src/main.rs"
